==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

Sep 22 2017 (bgol, horizon branch):
. Updated EDAPI plugin to version 4.3.0
  - Added "/market" and "/shipyard" check from cAPI.

Jul 03 2017 (bgol, horizon branch):
. Updated EDAPI plugin to version 4.2.0
  - Added "login" option.
  - EDDN Server Migration

May 31 2017 (bgol, horizon branch):
. Updated Journal plugin to ignore all events in multicrew.
. Missed the station command to output the category name.
. Item 'Neofabric Insulation' is only in category 'Industrial Materials'.
. Some new salvage items and updated average prices.

May 23 2017 (bgol, horizon branch):
. Don't change the planetary state if updating via the station command
  without specifying it.
. Updated EDAPI plugin to version 4.1.1
. Updated Journal plugin to recognise the "Location" event.
. Updated Journal plugin to recognise the "MarketSell" event to capture
  black market sales.

May 22 2017 (bgol, horizon branch):
. Updated buy, rares, run and trade command to also output the
  category name of the item if more details are requested.
. Data update from maddavo.

May 21 2017 (bgol, horizon branch):
. Updated some ship prices.
. New import plugin "Journal" which parses the Journal-files and add new
  systems and stations to the database (see README for description).

May 13 2017 (bgol, horizon branch):
. Updated EDAPI plugin to version 4.1.0
  - Shipyard handling reworked.
. Updated RareItem based on Capitan Ace Rimmer (http://www.hozbase.co.uk/elitedangerous)
. Data update from my netLog.

May 12 2017 (bgol, horizon branch):
. Updated the "netLog" plugin to accept new log format (>= 2.3)
. Added Dolphin (ship)
. Data update from maddavo.

Feb 17 2017 (bgol, horizon branch):
. Data update from maddavo.
. Updated EDAPI plugin to version 4.0.0
  - Login process reworked.